# ft-llm-2026

./: README.md
.github/workflows/: python-tests.yml  uvx-integration.yml
examples/singularity_submission/: README.md  download_model.py  main.py  output.jsonl  pyproject.toml  submission.def
math-eval/: .gitignore  README.md  pyproject.toml
math-eval/examples/: expected.json  gold.jsonl  prediction.jsonl
math-eval/src/math_eval/: main.py
math-eval/tests/: test_bare_keywords.py  test_complex.py  test_decimal_fraction.py  test_degree_radian.py  test_delimiter_fallback.py  test_dict_gold.py  test_evaluation_method_flag.py  test_function_power.py  test_interval.py  test_list_gold.py  test_matrix_vector.py  test_normalization.py  test_numeric_approx.py  test_paren_fallback.py  test_parse_and_verify.py  test_pm.py  test_soft.py  test_strict.py  test_vector.py
midtraining/: README.md
midtraining/corpus/: download_openwebmath.py  qsub_download.sh  qsub_tokenize.sh  run_download.sh  run_tokenize.sh
midtraining/installer/: README.md  qsub_setup.sh  run_setup.sh
midtraining/installer/scripts/: environment.sh
midtraining/installer/src/: install_apex.sh  install_flash_attention.sh  install_megatron_lm.sh  install_python.sh  install_pytorch.sh  install_requirements.sh  (+4 more)
singularity_submission/: .gitignore  Makefile  README.md  download_model.py  main.py  sample_problems.jsonl
tuning/: .gitignore  README.md  dpo_dataset.py  sft_dataset.py  train_dpo.py  train_sft.py
tuning/configs/: base_template.yaml  dpo.yaml  sft.yaml
tuning/scripts/: prepare_gsm8k.py
(+38 files in other folders)
